[package]
name = "shai"
version = "0.1.0"
edition = "2021"
authors = ["jonboh"]
description = "A shell AI assistant"
homepage = "https://github.com/jonboh/shai"
repository = "https://github.com/jonboh/shai"
license = "MIT"

exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.22"
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json", "stream"]}

eventsource-stream = { version = "0.2.3" }
futures = { version = "0.3.28" }
futures-util = { version = "0.3.28" }
bytes = "1.4"


ratatui = { version = "0.22.0", features = ["all-widgets"]}
tui-input = "0.8"
crossterm = {version = "0.27", features = ["event-stream"]}
tokio = {version = "1.29", features = ["rt", "rt-multi-thread", "macros"]}
thiserror = {version = "1.0"}

regex = {version = "1.9"}
lazy_static = {version = "1.4"}
